--- a/SpaceLoot.html
+++ b/SpaceLoot.html
@@ -25,9 +25,9 @@
       </div>
     </div>
 
-    <script type="module" src="./sprite.js"></script>
-    <script type="module" src="./game.js"></script>
-    <script type="module" src="./gameState.js"></script>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="sprite.js"></script>
+    <script type="module" src="game.js"></script>
+    <script type="module" src="gameState.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
