--- a/SpaceLoot.html
+++ b/SpaceLoot.html
@@ -20,7 +20,7 @@
         </h1>
       </div>
 
-      <div id="screen">
+      <div id="Screen">
         <canvas class="gameScreen" id="gc" width="600" height="600"></canvas>
       </div>
     </div>
